--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name="Dark Souls Item Randomizer"
+name="item_randomizer"
 description="Item Randomizer for Dark Souls PTDE and Remaster"
 authors = [
     { name="HotPocketRemix"},
@@ -27,4 +27,5 @@ version = {attr = "item_randomizer.__version__"}
 
 [project.optional-dependencies]
 testing = ["pytest", "pytest-cov"]
+dev = ["black"]
 build = ["cx-freeze", "pywin32"]
